# curlplusplus

./: CMakeLists.txt  README.md  shell.nix
src/: EasyCodes.hpp  EasyCodesFromCurl.hpp  EasyHandle.cpp  EasyHandle.hpp  EasyHandleBuilder.cpp  EasyHandleBuilder.hpp  EasyOptions.hpp  EasyOptionsToCurl.hpp  Message.hpp  MultiCodes.hpp  MultiCodesFromCurl.hpp  MultiHandle.cpp  MultiHandle.hpp  SList.hpp  main.cpp
